@@ -1,5 +1,10 @@
 ------------------- Upcoming version 8.4 -----------------------------
 
+User tools and API improvements and changes:
+
+- Fixed assignment of functions to the `COM` category in Score-P's scoring tool.
+  Score-P internal regions such as `TRACE BUFFER FLUSH` no longer induce `COM`.
+
 Compatibility:
 
 - The classic Intel compilers will now use the flag `-diag-disable=10441`
